--- a/rootdir/init.mt6582.rc
+++ b/rootdir/init.mt6582.rc
@@ -1005,4 +1005,40 @@ service enableswap /system/bin/sh /enableswap.sh
     class core
     oneshot	
 
+# CM Performance Profiles
 
+# Powersave
+on property:sys.perf.profile=0
+    write /sys/devices/system/cpu/cpu2/online "1"
+    write /sys/devices/system/cpu/cpu3/online "1"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "1300000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq "598000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "powersave"
+    write /sys/devices/system/cpu/cpu4/online "0"
+    write /sys/devices/system/cpu/cpu5/online "0"
+    write /sys/devices/system/cpu/cpu6/online "0"
+    write /sys/devices/system/cpu/cpu7/online "0"
+
+# Balanced
+on property:sys.perf.profile=1
+    write /sys/devices/system/cpu/cpu2/online "1"
+    write /sys/devices/system/cpu/cpu3/online "1"
+    write /sys/devices/system/cpu/cpu4/online "1"
+    write /sys/devices/system/cpu/cpu5/online "1"
+    write /sys/devices/system/cpu/cpu6/online "1"
+    write /sys/devices/system/cpu/cpu7/online "1"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "1664000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq "598000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "hotplug"
+
+# Performance
+on property:sys.perf.profile=2
+    write /sys/devices/system/cpu/cpu2/online "1"
+    write /sys/devices/system/cpu/cpu3/online "1"
+    write /sys/devices/system/cpu/cpu4/online "1"
+    write /sys/devices/system/cpu/cpu5/online "1"
+    write /sys/devices/system/cpu/cpu6/online "1"
+    write /sys/devices/system/cpu/cpu7/online "1"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq "1664000"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq "598000"
+write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "performance"
