--- a/rootdir/root/init.sprout_common.rc
+++ b/rootdir/root/init.sprout_common.rc
@@ -903,3 +903,9 @@ service conn_launcher /system/bin/6620_launcher -p /system/etc/firmware/
 #
 # Connectivity related services (End)
 #
+	
+service enableswap /system/bin/sh /enableswap.sh
+    class core
+    oneshot	
+
+
